desktop/brave-openvpn.yaml
apiVersion: v1
kind: Pod
metadata:
  name: brave-openvpn
spec:
  dnsPolicy: None
  dnsConfig:
    nameservers:
    - 103.86.96.100
    - 103.86.99.100
    - 1.1.1.1
  containers:
  - image: k8s.io/demo/openvpn
    imagePullPolicy: Never
    name: openvpn
    securityContext:
      capabilities:
        add:
        - NET_ADMIN
    volumeMounts:
    - mountPath: /etc/vpn
      name: passwd
    - mountPath: /dev/net/tun
      name: tun
    - mountPath: /etc/iptables
      name: iptables
  - image: k8s.io/demo/brave
    imagePullPolicy: Never
    name: brave
    volumeMounts:
    - mountPath: /dev/dri
      name: dri
    - mountPath: /home/brave/Downloads
      name: downloads
    - mountPath: /tmp/.X11-unix
      name: x11
    - mountPath: /dev/shm
      name: shm
  volumes:
  - name: passwd
    secret:
      secretName: nordvpn
  - name: tun
    hostPath:
       path: /dev/net/tun
       type: CharDevice
  - name: iptables
    configMap: 
      name: iptables
  - name: dri
    hostPath: 
      path: /dev/dri
      type: Directory
  - name: downloads
    hostPath:
       path: /home/thomas/import/docker
       type: Directory
  - name: x11
    hostPath: 
      path: /tmp/.X11-unix
      type: Directory
  - name: shm
    emptyDir:
      medium: Memory
