desktop/firefox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox
  namespace: desktop
spec:
 containers:
  - image: k8s.io/demo/firefox
    imagePullPolicy: Never
    name: firefox
    resources:
        limits:
          memory: 4Gi
          cpu: 2000m
        requests:
          memory: 4Gi
          cpu: 1000m
    volumeMounts:
    - mountPath: /dev/dri
      name: dri
    - mountPath: /home/firefox/Downloads
      name: downloads
    - mountPath: /tmp/.X11-unix
      name: x11
    - mountPath: /usr/share/fonts
      name: fonts
      readOnly: true
    - mountPath: /dev/shm
      name: shm
 volumes:
  - name: dri
    hostPath: 
      path: /dev/dri
      type: Directory
  - name: downloads
    hostPath:
       path: /home/thomas/import/docker
       type: Directory
  - name: x11
    hostPath: 
      path: /tmp/.X11-unix
      type: Directory
  - name: fonts
    hostPath:
      path: /usr/share/fonts
      type: Directory
  - name: shm
    emptyDir:
      medium: Memory
