desktop/hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath
spec:
  containers:
  - image: busybox
    name: sleep
    args:
    - sleep
    - "1d"
    volumeMounts:
    - mountPath: /test-pd
      name: test-volume
  volumes:
  - name: test-volume
    hostPath:
      # directory location on host
      path: /home/thomas/import/docker
      # this field is optional
      type: Directory
